<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/signup_background"
    tools:context="com.example.chatsystem.Registration">

<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp"
    android:id="@+id/reg_rel_layout"
    tools:context="com.example.chatsystem.LoginPage">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Full_name"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:background="@color/fui_transparent"
        android:theme="@style/LoginTextInputLayoutStyle"
        app:boxStrokeColor="#fff"
        app:errorEnabled="true"
        android:layout_marginTop="30dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:hint="@string/FullName"
            android:textCursorDrawable="@color/white"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:background="@color/fui_transparent"
        android:theme="@style/LoginTextInputLayoutStyle"
        app:boxStrokeColor="#fff"
        android:layout_below="@+id/Full_name"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:hint="@string/email"
            android:textCursorDrawable="@color/white"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_email"
        android:textColorHint="@color/white"
        android:theme="@style/LoginTextInputLayoutStyle"
        app:boxStrokeColor="#fff"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:hint="@string/Password"
            android:textCursorDrawable="@color/white"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RepeatPassword"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_password"
        android:textColorHint="@color/white"
        android:theme="@style/LoginTextInputLayoutStyle"
        app:boxStrokeColor="#fff"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/Repeat_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:hint="@string/Repeatpassword"
            android:textCursorDrawable="@color/white"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="22dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/RepeatPassword"
        android:background="@drawable/button_border"
        android:gravity="left"
        android:hint="@string/enter_birthday"
        android:onClick="setDate"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:paddingTop="5dp"
        android:theme="@style/AppBaseTheme"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_phone"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/white"
        android:theme="@style/LoginTextInputLayoutStyle"
        app:boxStrokeColor="#fff"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="22dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:onClick="sign_up"
        style="?android:attr/button"
        android:layout_below="@+id/text_phone"
        android:background="@drawable/button_gradient"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>
</ScrollView>